caliopen_website/assets/css/features.less
main {
  &#features-slider {
    background: #CCCCCC;
  }

  &#features-icons {
    background: white;
  }

  &#features-layout {
    background: #DAF6FF;
  }
}

#features-slider {
  .slider {
    .make-md-column(7);
    .make-md-column-offset(2);

    div#slides {
      margin: 50px 0 20px 0;
    }

    img {
      margin: 0 auto;
      max-width: 650px;
    }

    a {
      outline: none;
    }
  }
}

#features-icons {
  ul {
    padding: 0;
    margin: 50px 0;

    h3 {
      margin-top: 0;
      font-size: 1.3em;
    }

    li {
      .make-md-column(5);
      padding: 0 0 0 120px;
      margin: 0;

      list-style: none;
      background: transparent url('/assets/images/features_mode.png') left top no-repeat;

      &:first-child {
        .make-md-column-offset(1);
      }

      &#confidentiality {
        background-image: url('/assets/images/features_confidentiality.png');
      }
      &#importance {
        background-image: url('/assets/images/features_importance.png');
      }
      &#smart-appointment {
        background-image: url('/assets/images/features_rendezvous.png');
      }
      &#auto-label {
        background-image: url('/assets/images/features_labels.png');
      }
      &#custom-views {
        background-image: url('/assets/images/features_vues.png');
      }
      &#intuitive-search {
        background-image: url('/assets/images/features_recherche.png');
      }
      &#devices-manager {
        background-image: url('/assets/images/features_devices.png');
      }
      &#degraded-mode {
        background-image: url('/assets/images/features_modes.png');
      }
      &#advanced-settings {
        background-image: url('/assets/images/features_parametrages.png');
      }
      &#centralization {
        background-image: url('/assets/images/features_centralization.png');
      }

      p {
        max-width: 80%;
      }
    }
  }
}

#features-layout {
  article {
    .make-md-column(10);
    .make-md-column-offset(1);
    background: transparent url('/assets/images/features_ux.png') right top no-repeat;
    margin: 20px 0;
    padding: 40px 0;
    min-height: 200px;

    p {
      color: #01455C;
      margin-right: 340px;
    }
  }
}

